tests-system/lint-vcg-empty-enum/output
enum E {}
     ^ lint-vcg-empty-enum/foo.rsl:3: error: empty enumerations are not permitted
Processed 1 model, and 0 requirement files and found 1 error
